--- a/config.json
+++ b/config.json
@@ -7,7 +7,8 @@
 
   "channels": {
     "ticket_panel": 0,
-    "logs": 0
+    "logs": 0,
+    "archived": 0
   },
 
   "ticket_categories": {
@@ -27,3 +28,4 @@
     "member": 0
   }
 }
+
